force-app/main/default/objects/Convenio__c/fields/Coeficiente_modelo__c.field-meta.xml
<CustomField>
    <fullName>Coeficiente_modelo__c</fullName>
    <label>Coeficiente modelo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>