force-app/main/default/objects/Convenio__c/fields/Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Consultorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultorio</label>
    <referenceTo>Consultorio__c</referenceTo>
    <relationshipLabel>Convenios</relationshipLabel>
    <relationshipName>Convenios</relationshipName>
    <type>Lookup</type>
</CustomField>