force-app/main/default/objects/Convenio__c/fields/Modelo_convenio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_convenio__c</fullName>
    <label>Modelo convenio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>