force-app/main/default/objects/Convenio__c/fields/Nombre_de_prestador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_prestador__c</fullName>
    <label>Nombre de prestador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>