force-app/main/default/objects/Convenio__c/fields/Prestador__c.field-meta.xml
<CustomField>
    <fullName>Prestador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Convenios</relationshipLabel>
    <relationshipName>Convenios</relationshipName>
    <type>Lookup</type>
</CustomField>