force-app/main/default/objects/Convenio__c/validationRules/Solo_agregar_convenios_a_prestador.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_agregar_convenios_a_prestador</fullName>
    <active>false</active>
    <description>Solo se podrá agregar convenios a prestadores</description>
    <errorConditionFormula>AND(
    Prestador__r.Es_Prestador__c = False,
    NOT( ISBLANK(Prestador__c) )
   )</errorConditionFormula>
    <errorMessage>Sólo los prestadores pueden tener convenios.</errorMessage>
</ValidationRule>