force-app/main/default/objects/Convenio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consultorio__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_desde__c</columns>
    <columns>Modelo_convenio__c</columns>
    <columns>Prestador__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>